<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:id="@+id/fragment_share_1">

    <TextView
        android:id="@+id/sharefragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/roboto_medium_italic"
        android:text="Post your shoe!"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@color/cyan"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="186dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="141dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title_share1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/textInputLayout2"-->
        <!--android:layout_width="355dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:layout_marginBottom="14dp"-->
        <!--android:layout_marginEnd="28dp"-->
        <!--android:layout_marginStart="28dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/images_title"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
        <!--android:background="@drawable/white_background"-->
        <!--&gt;-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_title_string"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toTopOf="@+id/images_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            />

    <TextView
        android:id="@+id/images_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="378dp"
        android:layout_marginEnd="172dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/imagestxt_share2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>

    <Button
        android:id="@+id/takephoto_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/takepic_buttonstring"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/uploadphoto_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/images_title"
        />

    <Button
        android:id="@+id/uploadphoto_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/uploadpic_buttonstring"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/takephoto_button"
        app:layout_constraintTop_toBottomOf="@id/images_title"
        />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/image_grid"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/images_title"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/empty_image_icon"
            android:layout_marginEnd="10dp"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/empty_image_icon"
            android:layout_marginEnd="10dp"

            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/empty_image_icon"
            android:layout_marginEnd="10dp"

            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/empty_image_icon"
            />


    </LinearLayout>


    <Button
        android:id="@+id/next_button1"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/nextbutton1"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>